<resources>
    <string name="app_name" translatable="false">Chiaro</string>
    <string name="feels_like">Feels like %1$s</string>
    <string name="place_switcher_action">Change place</string>
    <string name="ribbon_desc">Sunrise at %1$s, sunset at %2$s</string>
    <string name="ribbon_desc_all_day">The sun never sets today</string>
    <string name="ribbon_desc_all_night">The sun never rises today</string>
    <string name="headline_severe_thunder">Thunderstorm around %1$s</string>
    <string name="headline_severe_ice">Freezing rain around %1$s</string>
    <string name="headline_severe_rain">Heavy rain around %1$s</string>
    <string name="headline_severe_snow">Heavy snow around %1$s</string>
    <string name="headline_wet_soon">Umbrella around %1$s</string>
    <string name="headline_wet_soon_clearing">Umbrella around %1$s, clearing after %2$s</string>
    <string name="headline_snow_soon">Snow around %1$s</string>
    <string name="headline_snow_soon_clearing">Snow around %1$s, clearing after %2$s</string>
    <string name="headline_wet_now_stopping">Rain should stop around %1$s</string>
    <string name="headline_wet_now">Rain for the rest of the day</string>
    <string name="headline_snow_now_stopping">Snow should stop around %1$s</string>
    <string name="headline_snow_now">Snow for the rest of the day</string>
    <string name="headline_wet_now_stopping_brief">Rain until about %1$s</string>
    <string name="headline_snow_now_stopping_brief">Snow until about %1$s</string>
    <string name="headline_wet_now_brief">Rain for the rest of the day</string>
    <string name="headline_snow_now_brief">Snow for the rest of the day</string>
    <string name="headline_wet_maybe">Rain possible around %1$s</string>
    <string name="headline_snow_maybe">Snow possible around %1$s</string>
    <string name="headline_wet_tomorrow">Umbrella tomorrow from %1$s</string>
    <string name="headline_snow_tomorrow">Snow tomorrow from %1$s</string>
    <string name="headline_mixed_soon">Rain and snow around %1$s</string>
    <string name="headline_mixed_soon_clearing">Rain and snow around %1$s, clearing after %2$s</string>
    <string name="headline_mixed_now_stopping">Rain and snow should stop around %1$s</string>
    <string name="headline_mixed_now">Rain and snow for the rest of the day</string>
    <string name="headline_mixed_now_stopping_brief">Rain and snow until about %1$s</string>
    <string name="headline_mixed_now_brief">Rain and snow for the rest of the day</string>
    <string name="headline_mixed_maybe">Rain and snow possible around %1$s</string>
    <string name="headline_mixed_tomorrow">Rain and snow tomorrow from %1$s</string>
    <string name="headline_frost">Frost around %1$s, low %2$s</string>
    <string name="headline_frost_brief">Frost around %1$s</string>
    <string name="headline_fog">Fog around %1$s</string>
    <string name="headline_wind">Strong wind, up to %1$s</string>
    <string name="headline_wind_brief">Wind up to %1$s</string>
    <string name="headline_wind_later">Strong wind around %2$s, up to %1$s</string>
    <string name="headline_wind_later_brief">Wind around %2$s, up to %1$s</string>
    <plurals name="freshness_minutes_ago">
        <item quantity="one">Updated %d minute ago</item>
        <item quantity="other">Updated %d minutes ago</item>
    </plurals>
    <plurals name="freshness_hours_ago">
        <item quantity="one">Updated %d hour ago</item>
        <item quantity="other">Updated %d hours ago</item>
    </plurals>
    <plurals name="freshness_days_ago">
        <item quantity="one">Updated %d day ago</item>
        <item quantity="other">Updated %d days ago</item>
    </plurals>
    <string name="error_offline">Couldn\'t update: you\'re offline</string>
    <string name="error_service">Couldn\'t update: the service isn\'t answering</string>
    <string name="error_unknown">Couldn\'t update: something went wrong</string>
    <string name="error_retry">Retry</string>
    <string name="section_next_hours">Next hours</string>
    <string name="section_rest_of_day">The rest of the day</string>
    <string name="section_week">The week</string>
    <string name="section_details">Details</string>
    <string name="tl_sunrise">Sunrise</string>
    <string name="tl_in_minutes">in %d min</string>
    <string name="tl_in_hours">in %d h</string>
    <string name="tl_in_hours_minutes">in %1$d h %2$d min</string>
    <string name="tl_golden_morning_end">Golden hour ends</string>
    <string name="tl_golden_evening">Golden hour</string>
    <string name="tl_sunset">Sunset</string>
    <string name="tl_blue_evening">Blue hour</string>
    <string name="tl_dark">Fully dark sky</string>
    <string name="tl_moonrise">Moonrise</string>
    <string name="tl_moonset">Moonset</string>
    <string name="tl_rain_start">Rain gets likely (%1$d%%)</string>
    <string name="tl_rain_stop">Rain should ease off</string>
    <string name="week_today">Today</string>
    <string name="week_day_desc">%1$s: %2$s, low %3$s, high %4$s, rain %5$d%%</string>
    <string name="week_day_desc_no_rain">%1$s: %2$s, low %3$s, high %4$s</string>
    <string name="hour_cell_desc">At %1$s, %2$s, %3$s, rain %4$d%%</string>
    <string name="hour_cell_desc_no_rain">At %1$s, %2$s, %3$s</string>
    <string name="rain_chart_caption">Chance of rain</string>
    <string name="rain_chart_caption_snow">Chance of snow</string>
    <string name="rain_chart_caption_mixed">Chance of rain or snow</string>
    <string name="rain_chart_desc">%1$s from %2$s to %3$s on a scale of 0 to 100%%, peaking at %4$d%% around %5$s</string>
    <string name="metric_uv">UV</string>
    <string name="metric_wind">Wind</string>
    <string name="metric_humidity">Humidity</string>
    <string name="metric_pressure">Pressure</string>
    <string name="metric_visibility">Visibility</string>
    <string name="metric_air">Air quality</string>
    <string name="metric_pollen">Pollen</string>
    <string name="wind_from">from %1$s</string>
    <string name="wind_gusts">Gusts up to %1$s</string>
    <string name="humidity_dew_note">Dew point %1$s</string>
    <string name="uv_peak_today">Peak today %1$d</string>
    <string name="pollen_family_grass">grass</string>
    <string name="pollen_family_tree">trees</string>
    <string name="pollen_family_weed">weeds</string>
    <string name="list_two">%1$s and %2$s</string>
    <string name="list_three">%1$s, %2$s and %3$s</string>
    <string name="uv_meaning_low">No protection needed</string>
    <string name="uv_meaning_moderate">Burns in about 45 minutes</string>
    <string name="uv_meaning_high">Burns in about 25 minutes, cover up</string>
    <string name="uv_meaning_very_high">Burns in about 15 minutes, cover up</string>
    <string name="uv_meaning_extreme">Burns in about 10 minutes, stay in shade</string>
    <string name="wind_meaning_calm">Still air, you won\'t notice it</string>
    <string name="wind_meaning_light">A light breeze</string>
    <string name="wind_meaning_moderate">Noticeable, not a bother</string>
    <string name="wind_meaning_strong">Hold on to your hat</string>
    <string name="wind_meaning_gale">Hard to walk against</string>
    <string name="night_meaning_freezing">Freezing: ice on the glass by morning</string>
    <string name="night_meaning_cold">A cold night, a coat if you go out</string>
    <string name="night_meaning_cool">A cool night, a sweater is enough</string>
    <string name="night_meaning_ajar">A cool night: leave the window ajar, a sweater if you go out</string>
    <string name="night_meaning_mild">A mild night, the window can stay open</string>
    <string name="night_meaning_warm">A warm night: it won\'t cool down</string>
    <string name="dew_meaning_dry">Dry, crisp air</string>
    <string name="dew_meaning_pleasant">Pleasant</string>
    <string name="dew_meaning_sticky">Slightly sticky</string>
    <string name="dew_meaning_muggy">Muggy</string>
    <string name="dew_meaning_oppressive">Oppressive</string>
    <string name="pressure_meaning_low">Low: unsettled weather is likelier</string>
    <string name="pressure_meaning_normal">In the normal range</string>
    <string name="pressure_meaning_high">High: leans toward clear skies</string>
    <string name="visibility_meaning_clear">Clear, you can see far</string>
    <string name="visibility_meaning_light_haze">Slight haze</string>
    <string name="visibility_meaning_haze">Thick haze</string>
    <string name="visibility_meaning_fog">Fog: take care on the road</string>
    <string name="aqi_meaning_good">Clean air, do anything</string>
    <string name="aqi_meaning_moderate">Fine for being outside</string>
    <string name="aqi_meaning_sensitive">Fine for a walk, skip the run</string>
    <string name="aqi_meaning_unhealthy">Better to stay indoors</string>
    <string name="aqi_meaning_very_unhealthy">Unhealthy: limit time outside</string>
    <string name="aqi_meaning_hazardous">Hazardous: stay indoors</string>
    <string name="pollen_level_none">None</string>
    <string name="pollen_level_low">Low</string>
    <string name="pollen_level_moderate">Moderate</string>
    <string name="pollen_level_high">High</string>
    <string name="pollen_level_very_high">Very high</string>
    <string name="pollen_meaning_none">Everyone breathes easy</string>
    <string name="pollen_meaning_low">Barely noticeable</string>
    <string name="pollen_meaning_moderate">Allergies will notice</string>
    <string name="pollen_meaning_high">A hard day for allergies</string>
    <string name="pollen_meaning_very_high">A very hard day for allergies: stay indoors if you can</string>
    <string name="metric_rain">Rain today</string>
    <string name="metric_snow">Snow today</string>
    <string name="metric_cloud">Clouds</string>
    <string name="rain_meaning_none">No umbrella today</string>
    <string name="rain_meaning_drops">A few drops, nothing serious</string>
    <string name="rain_meaning_umbrella">Take an umbrella</string>
    <string name="rain_meaning_wet">A wet day: dress for it</string>
    <string name="rain_meaning_heavy">Heavy rain: mind underpasses and streams</string>
    <string name="rain_last_hour">In the last hour %1$s</string>
    <string name="snow_meaning_dusting">A dusting</string>
    <string name="snow_meaning_slippery">Slippery roads: take care</string>
    <string name="snow_meaning_shovel">Snow to shovel: winter tyres needed</string>
    <string name="snow_meaning_heavy">Heavy snow: better not to travel</string>
    <string name="cloud_meaning_open">Open sky, full sun</string>
    <string name="cloud_meaning_veiled">A veiled sun, but it\'s there</string>
    <string name="cloud_meaning_closed">Closed sky, grey light</string>
    <string name="cloud_meaning_broken">Sun at times</string>
    <string name="cloud_meaning_open_night">Clear sky, stars out</string>
    <string name="cloud_meaning_veiled_night">Stars behind a veil</string>
    <string name="cloud_meaning_closed_night">Closed sky, no stars</string>
    <string name="cloud_meaning_broken_night">Stars between clouds</string>
    <string name="cloud_note_low">Mostly low</string>
    <string name="cloud_note_mid">Mostly mid-level</string>
    <string name="cloud_note_high">Mostly high and thin</string>
    <string name="wind_gust_max_today">Up to %1$s today</string>
    <string name="wind_gusts_and_max">Gusts %1$s, up to %2$s today</string>
    <string name="estimate_hero">Estimated from the forecast</string>
    <string name="estimate_details">Values estimated from the forecast for this hour: the latest data is from %1$s.</string>
    <string name="day_fact_rain">%1$s of rain</string>
    <string name="verdict_pass">Great</string>
    <string name="sky_name_sun_set">Sunset</string>
    <string name="widget_preview_evidence">cloud 10%</string>
    <string name="widget_preview_arc_hero">Sunset at 19:42</string>
    <string name="widget_preview_arc_sub">Milan · in 8 h</string>
</resources>